<resources>
    <string name="app_name">GermanExam</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="student_class">Класс</string>
    <string name="next">Далее</string>
    <string name="Exam">Экзамен</string>
    <string name="variants">Варианты ЕГЭ</string>
    <string name="settings">Настройки</string>
    <string name="hello_screen">Введите имя, фамилию и класс, чтобы учитель мог быстро ориентироваться в файлах записи вашего задания.</string>
    <string name="back">Назад</string>
    <string name="start_test">"Prüfung starten"</string>
    <string name="start_exam">Экзамен начнётся после нажатия кнопки \"Prüfung starten\"</string>
    <string name="task1">Aufgabe 1. Stellen Sie sich vor, dass Sie zusammen mit Ihrem Freund / Ihrer Freundin an einem Projekt arbeiten. Sie haben einen interessanten Beitrag für Ihr Projekt gefunden und wollen ihn Ihrem Freund / Ihrer Freundin vorlesen. Lesen Sie diesen Beitrag zunächst 1,5 Minuten still und danach laut vor. Sie haben zum Vorlesen höchstens 1,5 Minuten Zeit.</string>
    <string name="text1">"Karate ist ein japanisches Wort und heißt übersetzt \"leere Hand\". Das beschreibt diese Sportart sehr gut. Es geht um Selbstverteidigung und Nahkampf ohne Waffen. \nAngst, beim Karate einen Treffer abzubekommen, brauchst du nicht zu haben. Denn anders als beim Boxen verzichten Karate-Sportler (sie nennen sich übrigens Karatekas) auf Treffer am Gegner. Sie stoppen Fuß- und Fauststöße vor dem Auftreffen ab. Voraussetzung dafür ist Selbstdisziplin, Verantwortungsbewusstsein gegenüber dem Partner und natürlich eine gute Körperbeherrschung. \nDank seiner vielseitigen Anforderungen ist dieser Sport ein idealer Ausgleich zum Alltag. Beim Karate werden Kraft, Ausdauer, Schnelligkeit und Beweglichkeit trainiert. Das macht fit! Mit Entspannungstechniken, Atemübungen und Meditation steigert ein Karatekämpfer seine Konzentrationsfähigkeit und schult die eigene Körperwahrnehmung. "</string>
    <string name="preparation">Vorbereitung</string>
    <string name="task_one">Aufgabe 1</string>
    <string name="prep_ans">Vorbereitung 01:30\nAntwort 01:30</string>
    <string name="timer">-01:30</string>
    <string name="student_name">Ученик: Иван Иванов</string>
    <string name="person_class">Класс: 11А</string>
    <string name="microphone_test">Проверка микрофона</string>
    <string name="change_interface">Размер интерфейса</string>
    <string name="about_application">О приложении</string>
    <string name="change_data">Изменить данные</string>
    <string name="save">Сохранить</string>
    <string name="dialog_window_title">Куда Вы хотите перейти?</string>
    <string name="desktop">Рабочий стол</string>
    <string name="menu">Главное меню</string>
    <string name="variants_menu">Выбор варианта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>